<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fall Detector</string>
    <string name="title_activity_detail">Detail Activity</string>
    <string name="title_active_session">Active Session</string>
    <string name="title_activity_fall">Fall Activity</string>
    <string name="title_settings">Settings</string>
    
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="tag_start">Starts on\u0020</string>
    <string name="tag_second">\u0020at\u0020</string>
    <string name="tag_duration">Duration:\u0020</string>
    <string name="tag_falls">Falls:\u0020</string>
    <string name="test">Test</string>
    
	<string name="title_current">Current session name</string>
	<string name="thumbnail">Thumbnail</string>
	<string name="date">Session start time</string>
	<string name="not_started">Session not yet started</string>
	<string name="duration">Duration:</string>
	<string name="end_button">End</string>
	<string name="play_button">Play</string>
	<string name="fall_title">Fall Events</string>
	<string name="fall_data">Fall Data</string>
	
    <string name= "modify">Modify</string>
    <string name= "delete">Delete</string>
    <string name= "save">Save</string>
    <string name= "cancel">Cancel</string>
    <string name= "add">Add</string>
    
    <string name= "no_value">Insert a name for the session</string>
    <string name= "modify_made">Session modified</string>
    <string name= "modify_no_made">Session no modified</string>
    
    <string name= "title_modify_dialog">Modify Session:</string>
    <string name= "title_add_dialog">Add Session:</string>
    <string name= "tag_name_dialog">Session Name:</string>
    <string name= "add_session">New Session Added</string>
    <string name= "name_session">Insert a name for the session</string>
    
    <string name= "dialog_message">A session is just started, stop it before create a new one</string>
    <string name= "dialog_title">Can\u0027t create a Session</string>
	<!-- Chart -->
	
	<string name="x">X: </string>
	<string name="y">Y: </string>
	<string name="z">Z: </string>
	<string name="acc_not_started">Not started</string>
	
	<!-- Settings -->
	
	<string name="general_tag">GENERAL SETTINGS</string>
	<string name="ring_tag">Active advise:</string>
	<string name="time_tag">Set advise time</string>
	<string name="accel_set_tag">ACCELEROMETER SETTINGS</string>
	<string name="accel_tag">Select Accelerometer</string>
	<string name="frequency_tag">Accelerometer Frequency</string>
	<string name="mail_tag">MAIL SETTINGS</string>	
    <string name="rapid_mail_tag">Send mail immediately</string>	
    <string name="mail_list_tag">Mail Address List</string>
    <string name="mail_add_tag">Add new</string>	
    <string name="max_dur_tag">Max Session Duration:</string>
    <string name="p">+</string>
    <string name="m">-</string>
    
	<string name="default_tag">No value</string>
	
	<string name="standard">Standard</string>
	<string name="low">Low</string>
	<string name="middle">Middle</string>
	<string name="high">High</string>
	
	<string name="quality">Quality</string>
	
	<string name="accelerometer">Accelerometer</string>
	<string name="frequency">Frequency</string>
	
	<string name="time_set_at">Time set at\u0020</string>
	<string name="no_active_adv">Advise no active</string>
	<string name="no_active_mail">Rapid send mail no active</string>
	
	<string name="log_in">Log In:</string>
	<string name="gmail_addr">Gmail Address\u2026</string>
	<string name="password">Password\u2026</string>
	
	<string name="on_start_sign_in">Insert email address and password of a Gmail account</string>
	<string name="not_valid_value">Email address or password not valid, please insert email address and password of a Gmail account, or control gmail permissions (https://www.google.com/settings/security/lesssecureapps)</string>
	<string name="not_valid_address">No a @gmail.com account, please insert email address and password of a Gmail account</string>
	
	<string name="not_start">Not Started</string>
	<string name="error_advise">An Error Occurred</string>
	
	<string name="dialog_message_tostart">A new Session is yet crated and waits to start</string>
	
	<string name="add_mail">Add Mail Address:</string>
	<string name="name_edit">Name\u2026</string>
	<string name="surname_edit">Surname\u2026</string>
	<string name="address_edit">Address\u2026</string>
	
	<string name="address_edit_info_start">Create a new contact for emergency</string>
	<string name="address_edit_info_add">Ad a name or a surname</string>
	<string name="address_edit_info_no">No valid mail address</string>
	
	<string name="add_new_mail">New mail address added</string>

	
	<string name="select_freq">Select frequency:</string>
	
	<string name="con_dial_title">Activate this service/s for complete functionality of the application</string>
	<string name="location_but">GO TO LOCATION</string>
	<string name="location_sum">Location is disable, activate it for position function</string>
	<string name="mobile_but">GO TO MOBILE</string>
	<string name="mobile_sum">Mobile is disable, activate it for sending function</string>
	<string name="wifi_but">GO TO WIFI</string>
	<string name="wifi_sum">Wifi is disable, activate it only for a domestic use</string>
	<string name="con_dial_but">Active Nothing (the application don\'t work for sending message and get location)</string>

	<string name="dialog_modify_name">Modify Session Name</string>
	
	<string name="latitude">Latitude</string>
	<string name="longitude">Longitude</string>
	
	<string name="alarm_title">Start a new Session!!</string>
	<string name="alarm_info">Click here!!</string>

	<string name="mail_sbj">I\'m fall, help me!!</string>
	<string name="mail_msg1">I\'m fall at\u0020</string>
	<string name="mail_msg2">\u0020on location:</string>
	<string name="mail_end1">Please save me!! Thank\'s!!</string>
	<string name="mail_end2">Power by Android Buccaneers</string>
</resources>
