<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/location_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_but"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/location_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_sum"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mobile_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/mobile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_but"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/mobile_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_sum"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wifi_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/wifi_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_but"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/wifi_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_sum"
            android:layout_marginBottom="10dp"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="5dp"
        android:background="@color/ligth_gray" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/con_dial_but" />

</LinearLayout>