<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fall_layout"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="3"
    tools:context="it.unipd.dei.esp1415.falldetector.FallDetailActivity$PlaceholderFragment" >

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        
	    <ImageView 
	        android:id="@+id/fall_thumbnail"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dp"
	        android:src="@drawable/paint"
	        android:contentDescription="@string/thumbnail"
	    />
	    
	    <LinearLayout android:orientation="vertical"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	        
	        <TextView
	        	android:id="@+id/fall_date"
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:gravity="center"
	        	android:singleLine="true"
	        	android:textStyle="italic|bold"
	        	android:text="@string/date"
	        />
	        
	        <TextView
	            android:id="@+id/fall_time"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:singleLine="true"
	            android:text="@string/not_started"
	        />
	        
	        <TextView
	            android:id="@+id/latitude"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:singleLine="true"
	            android:textStyle="italic|bold"
	            android:text="@string/latitude"
	        />
	        
	        <TextView
	            android:id="@+id/longitude"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:singleLine="true"
	            android:textStyle="italic|bold"
	            android:text="@string/longitude"
	        />
	        
	        <TextView
	            android:id="@+id/sended"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	        />
	    </LinearLayout>	    
    </LinearLayout>
</LinearLayout>
