<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3">
    
    <TextView
        android:id="@+id/current_sesstion_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:singleLine="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/title_current"
    />
    
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        
	    <ImageView 
	        android:id="@+id/current_thumbnail"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dp"
	        android:src="@drawable/paint"
	        android:contentDescription="@string/thumbnail"
	    />
	    
	    <LinearLayout android:orientation="vertical"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	        
	        <TextView
	        	android:id="@+id/date"
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:gravity="center"
	        	android:singleLine="true"
	        	android:textStyle="italic|bold"
	        	android:text="@string/date"
	        />
	        
	        <TextView
	            android:id="@+id/session_start_time"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:singleLine="true"
	            android:text="@string/not_started"
	        />
	        
	        <TextView
	            android:id="@+id/duration"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:singleLine="true"
	            android:textStyle="italic|bold"
	            android:text="@string/duration"
	        />
	        
	        <Chronometer
	            android:id="@+id/session_duration"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	        />
	        
	        <LinearLayout android:orientation="horizontal"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center">
	            
	            <ImageButton android:id="@+id/play_button"
	                android:src="@drawable/play_button_default"
	                android:contentDescription="@string/play_button"
	            	android:layout_width="wrap_content"
	            	android:layout_height="wrap_content"
	            	android:layout_margin="10dp"
	            />
	            
	            <ImageButton android:id="@+id/end_button"
	                android:src="@drawable/end_button_default"
	                android:contentDescription="@string/end_button"
	            	android:layout_width="wrap_content"
	            	android:layout_height="wrap_content"
	            	android:layout_margin="10dp"
	            />
	            
	        </LinearLayout>	<!-- buttons -->
	        
	    </LinearLayout>	<!-- current session data -->
	    
    </LinearLayout>	<!-- session information label -->

	<LinearLayout android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1">
	    
		<LinearLayout android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">

			<TextView
			    android:id="@+id/acc_data_x"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="15dp"
			    android:maxEms="5"
	            android:minEms="5"
			    android:gravity="fill|end"
			    android:singleLine="true"
			    android:text="@string/acc_not_started"
			    android:textColor="#ff0000"
			    android:textSize="12sp" />
	        
	        <it.unipd.dei.esp1415.falldetector.utility.ChartView
	        	android:id="@+id/chart_x_axis"
	        	android:layout_width="fill_parent"
	        	android:layout_height="35dp"
	        	android:layout_margin="3dp"
	        	android:background="#ff0000"
	    	/>
	        
		</LinearLayout>
	
		<LinearLayout android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
		
		    <TextView android:id="@+id/acc_data_y"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="15dp"
	            android:maxEms="5"
	            android:minEms="5"
	            android:gravity="fill|end"
	            android:singleLine="true"
	            android:textSize="12sp"
	            android:textColor="#00ff00"
	            android:text="@string/acc_not_started"
	        />
		    
	        <it.unipd.dei.esp1415.falldetector.utility.ChartView
			    android:id="@+id/chart_y_axis"
			    android:layout_width="fill_parent"
			    android:layout_height="35dp"
			    android:layout_margin="3dp"
			    android:background="#00ff00"
			/>
	        
		</LinearLayout>
	
		<LinearLayout android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
        
		    <TextView android:id="@+id/acc_data_z"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="15dp"
	            android:maxEms="5"
	            android:minEms="5"
	            android:gravity="fill|end"
	            android:singleLine="true"
	            android:textSize="12sp"
	            android:textColor="#0000ff"
	            android:text="@string/acc_not_started"
	        />
	    
		    <it.unipd.dei.esp1415.falldetector.utility.ChartView 
	        	android:id="@+id/chart_z_axis"
	        	android:layout_width="fill_parent"
	        	android:layout_height="35dp"
	        	android:layout_margin="3dp"
        		android:background="#0000ff"
    		/>
        
    	</LinearLayout>
	    
	</LinearLayout>
    
    <ListView android:id="@+id/session_falls"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
    />
    
</LinearLayout>